--- a/search-box/default.css
+++ b/search-box/default.css
@@ -1,5 +1,13 @@
-#chat-toolbar #search-box-control {
+#chat-toolbar #search-box-button {
     float: right;
+}
+
+#search-box-tab a{
+    padding: 0px 10px 10px 10px
+}
+
+#search-box-tab a span {
+    padding-top: 5px; 
 }
 
 input[type='text']#collocutor-search-input{
