set scroll to auto for search result list

--- a/search-box/default.css
+++ b/search-box/default.css
@@ -29,5 +29,5 @@ input[type='text']#collocutor-search-input{
 
 .collocutor-search-result {
     max-height: 300px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
